# multidown

./: .gitignore  README.md  TESTING_GUIDE.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml  test.yml
dist-extension/: background.js  com.multidown.app.json  extension.pem  multidown-extension.crx
dist-extension/unpacked/: background.js  manifest.json
docs/: IDM核心原理与功能模块分析.md  功能模块.md  技术栈选型分析.md
docs/design/: icon-preview.html  图标与Logo设计说明.md
integration/: README.md
integration/extension/: background.js  com.multidown.app.json  manifest.json  popup.html
integration/native-host/: Cargo.toml
integration/native-host/src/: main.rs
scripts/: build-extension.mjs  build-nsis.mjs  icons-from-svg.mjs  sign-crx.mjs
scripts/nsis/: installer.nsi
src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.nsis.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/engine/: mod.rs  persistence.rs  scheduler.rs  task.rs  types.rs  writer.rs
src-tauri/src/network/: client.rs  mod.rs
src/components/: AboutModal.tsx  AddTask.tsx  BatchAdd.tsx  ContextMenu.tsx  DownloadFileInfo.tsx  InstallExtensionModal.tsx  MenuBar.tsx  MoveRenameModal.tsx  OptionsModal.tsx  PropertiesModal.tsx  TaskList.tsx  TitleBar.tsx  Toast.tsx  Toolbar.tsx
src/types/: download.ts
