[package]
name = "multidown"
version = "0.1.0"
description = "Multidown - 对标 IDM 的跨平台下载工具"
edition = "2021"
rust-version = "1.70"
license = "MIT"

[lib]
name = "multidown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt-multi-thread", "net"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
bytes = "1"
urlencoding = "2"
futures-util = "0.3"
arboard = "3"
opener = "0.7"
winreg = "0.52"  # 用于Windows注册表操作
dirs = "5"       # 用于获取用户主目录
zip = "0.6"      # 用于打包扩展为zip文件
walkdir = "2"    # 用于遍历目录
chrono = "0.4"   # 用于日志时间戳

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# 降低 dev 编译时内存占用，避免 rustc/LLVM OOM（内存不足时可启用）
[profile.dev]
codegen-units = 1
